CMakeLists.txt update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,17 +21,14 @@ set_property(TARGET cmtz PROPERTY C_STANDARD 99)
 add_library(jsonmtz "${PROJECT_SOURCE_DIR}/jsonmtz.c")
 set_property(TARGET jsonmtz PROPERTY C_STANDARD 99)
 
-if(WIN32)
-    target_link_libraries(mtz2json jsonmtz cmtz "${JANSSON_LIBRARIES}")
-    target_link_libraries(json2mtz jsonmtz cmtz "${JANSSON_LIBRARIES}")
-endif()
-
-if(APPLE)
-    target_link_libraries(mtz2json jsonmtz cmtz "${JANSSON_LIBRARIES}")
-    target_link_libraries(json2mtz jsonmtz cmtz "${JANSSON_LIBRARIES}")
+if(WIN32 OR APPLE)
+    target_link_libraries(jsonmtz cmtz "${JANSSON_LIBRARIES}")
+    target_link_libraries(mtz2json jsonmtz)
+    target_link_libraries(json2mtz jsonmtz)
 endif()
 
 if(UNIX AND NOT APPLE)
-    target_link_libraries(mtz2json jsonmtz cmtz m "${JANSSON_LIBRARIES}")
-    target_link_libraries(json2mtz jsonmtz cmtz m "${JANSSON_LIBRARIES}")
+    target_link_libraries(jsonmtz cmtz m "${JANSSON_LIBRARIES}")
+    target_link_libraries(mtz2json jsonmtz)
+    target_link_libraries(json2mtz jsonmtz)
 endif()
